<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_bar"
        android:title="@string/kereses"
        android:icon="@drawable/baseline_search_24"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />
    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/ingatlan_hozz_ad_sa"
        app:showAsAction="always" />

    <item
        android:id="@+id/view_selector"
        android:title="@string/nezet"
        android:icon="@drawable/baseline_apps_24"
        app:showAsAction="ifRoom"

        />
    <item
        android:id="@+id/setting_button"
        android:title="@string/options"
        app:showAsAction="never"

        />
    <item
        android:id="@+id/log_out"
        android:title="@string/logout"
        app:showAsAction="never"

        />
</menu>