<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_title"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginBottom="500dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"

        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/userEmailText"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/userEmailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"

        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/userPasswordTextUjra"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.761"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/userPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"

        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.597"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/userPasswordTextUjra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_again"

        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/userPasswordText"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.83"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPasswordText"
        app:layout_constraintVertical_bias="0.393">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:onClick="register"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/cancel"
            android:onClick="cancel"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>